# Recallify

./: .env.example  .gitignore  HOTFIX.md  IMPLEMENTATION_STATUS.md  README.md  SPOTIFY_INTEGRATION_COMPLETE.md  SPOTIFY_REDIRECT_URI_UPDATE.md  SPOTIFY_SETUP.md  TESTING.md  V2_PROGRESS.md  clear-pomodoro-history.js  clear-pomodoro-history.ps1  clear-pomodoro-history.sql  package-lock.json  package.json  spotify-callback.html  tsconfig.json  vite.config.ts  vitest.config.ts
public/sounds/clash-royale/: README.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AddSyllabusItemModal.tsx  CalendarHeatmap.tsx  CelebrationModal.tsx  ImportSyllabusModal.tsx  PdfManager.tsx  RichTextEditor.tsx  Sidebar.test.tsx  Sidebar.tsx  SyllabusTab.tsx
src/contexts/: ThemeContext.tsx
src/data/: badges.json  folklore.json
src/hooks/: useAnansiYarn.ts  useBadgeSystem.ts  useFolklore.ts  useMythicSync.ts  useSpotifyPlayer.ts
src/pages/: AnalyticsPage.tsx  BadgesPage.tsx  CalendarPage.tsx  HistoryPage.tsx  PomodoroHistoryPage.tsx  PomodoroPage.tsx  SettingsPage.tsx  SpotifyCallbackPage.tsx  StreakPage.tsx  SubjectDetailPage.tsx  SubjectsPage.tsx  TagManagementPage.tsx
src/services/: clashRoyaleSound.ts  database.test.ts  database.ts  spotify.ts
src/stores/: mythicStore.ts
src/styles/: global.css  mythicThemes.ts  theme.ts
src/test/: setup.ts  test-utils.tsx
src/types/: index.ts  mythic.ts
src/utils/: confetti.ts  mythicAudio.ts  mythicPerformance.ts  richTextUtils.ts  spacedRepetition.test.ts  spacedRepetition.ts
(+18 files in other folders)
